--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,9 @@
     "noEmit": true,
     "rootDir": "."
   },
-  "include": [
-    "scripts",
-    "contracts"
-  ],
   "exclude": [
     "node_modules",
     "cache",
-    "artifacts",
+    "*artifacts",
   ]
 }
