--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__
 
 .venv/
 .env/
+env/
 
 node_modules/
 npm-debug.log*
@@ -14,3 +15,9 @@ yarn-error.log*
 artifacts/
 types/
 cache/
+
+vy_contracts/
+vy_interfaces/
+vy_reports/
+vy_scripts/
+vy_tests/
