--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typechain/hardhat": "^2.0.0",
     "ethers": "^5.4.4",
     "hardhat-typechain": "^0.3.5",
+    "nervos-godwoken-integration": "^0.0.6",
     "ts-generator": "^0.1.1",
     "typechain": "^5.1.2"
   },
